--- a/CSC209/Weeks/Week2/styles.css
+++ b/CSC209/Weeks/Week2/styles.css
@@ -3,7 +3,17 @@ body {
   }
 h1 {
     color: blue;
+    border: 2px solid powderblue;
+    padding: 30px;
+    margin: 50px;
+    font-family: verdana;
+    font-size: 300%;
   }
 p {
     color: red;
+    border: 2px solid powderblue;
+    padding: 30px;
+    margin: 50px;
+    font-family: courier;
+    font-size: 160%;
   }
