--- a/CSC209/Weeks/Week2/styles.css
+++ b/CSC209/Weeks/Week2/styles.css
@@ -3,7 +3,7 @@ body {
   }
 h1 {
     color: blue;
-    border: 2px solid powderblue;
+    border: 2px solid rgb(24, 175, 195);
     padding: 30px;
     margin: 50px;
     font-family: verdana;
@@ -11,7 +11,7 @@ h1 {
   }
 p {
     color: red;
-    border: 2px solid powderblue;
+    border: 2px solid rgb(77, 195, 211);
     padding: 30px;
     margin: 50px;
     font-family: courier;
