--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -16,7 +16,7 @@ ul {
     overflow: auto;
     border: 1px solid rgb(0, 0, 0)
   }
-  li a {
+li a {
     display: block;
     color: #000;
     padding: 8px 16px;
@@ -25,7 +25,39 @@ ul {
   }
   
   /* Change the link color on hover */
-  li a:hover {
+li a:hover {
     background-color: #555;
     color: white;
   }
+
+
+article {
+    float: left;
+    padding: 20px;
+    width: 70%;
+    background-color: #ffffff;
+    border: #000; 
+}
+  
+  /* Clear floats after the columns */
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the footer */
+footer {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    border: #000;
+  }
+
+@media (max-width: 600px) {
+    nav, article {
+      width: 100%;
+      height: auto;
+    }
+}
