--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -6,6 +6,14 @@
     border-color: black;
     border: 1px solid black;
 }
+
+nav {
+    float: left;
+    width: 25%;
+    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid black;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -36,7 +44,7 @@ article {
     padding: 20px;
     width: 70%;
     background-color: #ffffff;
-    border: #000; 
+    border: 1px solid #000; 
 }
   
   /* Clear floats after the columns */
@@ -52,7 +60,7 @@ footer {
     padding: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
-    border: #000;
+    border: 1px solid #000;
   }
 
 @media (max-width: 600px) {
