--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -14,7 +14,7 @@ nav {
     padding: 20px;
     border: 1px solid black;
 }
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
