--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -42,7 +42,7 @@ article {
     float: left;
     padding: 20px;
     width: 75%;
-    background-color: #ffffff;
+    background-color: #bb7878;
     border: 1px solid #000; 
     height: 100%;
 }
@@ -56,7 +56,7 @@ section::after {
   
   /* Style the footer */
 footer {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(102, 14, 14);
     padding: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
