--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -15,7 +15,7 @@ nav {
     width: 25%;
     background-color: #ffffff;
     padding: 20px;
-    height: 100%;
+    height: 400px;
 }
 nav ul {
     list-style-type: none;
