--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -22,6 +22,7 @@ nav ul {
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+    height: 100%;
     overflow: auto;
     border: 1px solid rgb(0, 0, 0)
   }
