--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -14,7 +14,7 @@ nav {
     float: left;
     width: 25%;
     background-color: #ffffff;
-    padding: 20px;
+   /* padding: 20px;*/
     height: 400px;
 }
 nav ul {
