--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -66,7 +66,7 @@ footer {
     border: 1px solid #000;
   }
 
-/*@media (max-width: 600px) {
+@media (max-width: 600px) {
     nav, article {
       width: 100%;
       height: auto;
