--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -45,7 +45,7 @@ article {
     float: left;
     padding: 20px;
     width: 75%;
-    background-color: #bb7878;
+    background-color: #ffffff;
     border: 1px solid #000; 
     height: 100%;
 }
@@ -59,14 +59,14 @@ section::after {
   
   /* Style the footer */
 footer {
-    background-color: rgb(102, 14, 14);
+    background-color: rgb(255, 255, 255);
     padding: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
     border: 1px solid #000;
   }
 
-@media (max-width: 100%) {
+@media (max-width: 600px) {
     nav, article {
       width: 100%;
       height: auto;
