--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -3,6 +3,24 @@
 }
 h1 {
     font-weight: bold;
+    color: #000;
+}
+
+h2 {
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+}
+
+h3 {
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+}
+
+p {
+    font-weight: bold;
+    color: #000;
 }
 .center {
     display: block;
