--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -59,6 +59,7 @@ li a {
     padding: 8px 16px;
     text-decoration: none;
     text-align: center;
+    font-weight: bold;
   }
   
   /* Change the link color on hover */
