--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -94,6 +94,8 @@ footer {
     border: 1px solid #000;
   }
 
+#more {display: none;}
+
 @media (max-width: 600px) {
     nav, article {
       width: 100%;
