--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -96,7 +96,9 @@ footer {
 
 #more {display: none;}
 
-
+.button {
+    align-self: center;
+}
 @media (max-width: 600px) {
     nav, article {
       width: 100%;
