--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -97,7 +97,10 @@ footer {
 #more {display: none;}
 
 .button {
-    align-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
 }
 @media (max-width: 600px) {
     nav, article {
