--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -43,7 +43,7 @@ nav {
     width: 20%;
     background-color: #ffffff;
     padding: 1px;
-    height: 400px;
+    height: 100%;
 }
 nav ul {
     list-style-type: none;
