--- a/CSC209/Hwks/Hwk2/creative/lightmode.css
+++ b/CSC209/Hwks/Hwk2/creative/lightmode.css
@@ -1,29 +1,30 @@
 * {
     box-sizing: border-box;
 }
+
 body {
-    background-color: #000000;
+    background-color: rgb(96, 183, 149)
 }
 h1 {
     font-weight: bold;
-    color: #ffffff;
+    color: rgb(40, 108, 82);
 }
 
 h2 {
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: rgb(40, 108, 82);
     text-align: center;
 }
 
 h3 {
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: rgb(40, 108, 82);
     text-align: center;
 }
 
 p {
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: rgb(40, 108, 82);
     text-align: center;
 }
 .center {
@@ -33,18 +34,18 @@ p {
     width: 50%;
 }
 .header {
-    background-color: #000000;
-    color: rgb(255, 255, 255);
+    background-color: rgb(163, 231, 205);
+    color: rgb(40, 108, 82);
     text-align: center;
     padding: 20px;
-    border-color: rgb(255, 255, 255);
-    border: 5px solid rgb(255, 255, 255);
+    border-color: rgb(40, 108, 82);
+    border: 5px solid rgb(40, 108, 82);
 }
 
 nav {
     float: left;
     width: 20%;
-    background-color: #000000;
+    background-color: rgb(43, 151, 110);
     padding: 1px;
     height: 100%;
 }
@@ -52,14 +53,14 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color:rgb(43, 151, 110);
     height: 100%;
     overflow: auto;
-    border: 5px solid rgb(255, 255, 255);
+    border: 5px solid rgb(40, 108, 82);
   }
 li a {
     display: block;
-    color: rgb(255, 255, 255);
+    color: #000;
     padding: 8px 16px;
     text-decoration: none;
     text-align: center;
@@ -77,8 +78,8 @@ article {
     float: left;
     padding: 10px;
     width: 80%;
-    background-color: #000000;
-    border: 5px solid rgb(255, 255, 255); 
+    background-color: #ffffff;
+    border: 5px solid #000; 
     height: 100%;
 }
   
@@ -91,11 +92,11 @@ section::after {
   
   /* Style the footer */
 footer {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     padding: 10px;
     text-align: center;
-    color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border: 1px solid #000;
   }
 
 #more {display: none;}
@@ -110,11 +111,10 @@ footer {
 table {
     width: auto;
     height: 300px;
-    color: #ffffff;
 }
 
 a {
-    color: rgb(255, 255, 255);
+    color: #000;
 }
 
 @media (max-width: 600px) {
