--- a/CSC209/Hwks/Hwk2/technical/lightmode.css
+++ b/CSC209/Hwks/Hwk2/technical/lightmode.css
@@ -52,7 +52,7 @@ nav ul {
     background-color: #ffffff;
     height: 100%;
     overflow: auto;
-    border: 5px solid rgb(0, 0, 0)
+    border: 5px solid rgb(0, 0, 0);
   }
 li a {
     display: block;
