--- a/CSC209/Hwks/Hwk2/creative/lightmode.css
+++ b/CSC209/Hwks/Hwk2/creative/lightmode.css
@@ -79,7 +79,7 @@ article {
     padding: 10px;
     width: 80%;
     background-color: #ffffff;
-    border: 5px solid #000; 
+    border: 5px solid rgb(40, 108, 82); 
     height: 100%;
 }
   
@@ -96,7 +96,7 @@ footer {
     padding: 10px;
     text-align: center;
     color: rgb(0, 0, 0);
-    border: 1px solid #000;
+    border: 1px solid rgb(40, 108, 82);
   }
 
 #more {display: none;}
@@ -114,7 +114,7 @@ table {
 }
 
 a {
-    color: #000;
+    color: rgb(40, 108, 82);
 }
 
 @media (max-width: 600px) {
