--- a/CSC209/Hwks/Hwk2/creative/lightmode.css
+++ b/CSC209/Hwks/Hwk2/creative/lightmode.css
@@ -69,8 +69,8 @@ li a {
   
   /* Change the link color on hover */
 li a:hover {
-    background-color: #555;
-    color: white;
+    background-color: rgb(20, 73, 53);
+    color: rgb(40, 108, 82);
   }
 
 
