--- a/CSC209/Hwks/Hwk2/creative/green.css
+++ b/CSC209/Hwks/Hwk2/creative/green.css
@@ -119,7 +119,7 @@ a {
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-    background-color: #eee;
+    background-color:rgb(43, 151, 110);
     color: #444;
     cursor: pointer;
     padding: 18px;
@@ -138,7 +138,7 @@ a {
   /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: rgb(163, 231, 205);
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
