--- a/CSC209/Hwks/Hwk2/creative/green.css
+++ b/CSC209/Hwks/Hwk2/creative/green.css
@@ -132,7 +132,7 @@ a {
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: rgb(57, 138, 107)#ccc;
   }
   
   /* Style the accordion panel. Note: hidden by default */
