--- a/CSC209/Hwks/Hwk2/creative/green.css
+++ b/CSC209/Hwks/Hwk2/creative/green.css
@@ -120,7 +120,8 @@ a {
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     background-color:rgb(43, 151, 110);
-    color: #444;
+    font-weight: bold;
+    color: rgb(40, 108, 82);
     cursor: pointer;
     padding: 18px;
     width: 100%;
