--- a/CSC209/Hwks/Hwk2/creative/darkmode.css
+++ b/CSC209/Hwks/Hwk2/creative/darkmode.css
@@ -108,7 +108,7 @@ footer {
 }
 
 table {
-    width: auto;
+    width: 100%;
     height: 300px;
     color: #ffffff;
 }
@@ -119,26 +119,27 @@ a {
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-    background-color: #eee;
-    color: #444;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     padding: 18px;
     width: 100%;
     text-align: left;
-    border: none;
-    outline: none;
+    border: 5px solid white;
+    outline: solid white;
     transition: 0.4s;
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: rgb(255, 255, 255);
   }
   
   /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
     background-color: white;
+    color: black;
     max-height: 0;    
     overflow: hidden;
     transition: max-height 0.2s ease-out;
