--- a/CSC209/Hwks/Hwk2/creative/darkmode.css
+++ b/CSC209/Hwks/Hwk2/creative/darkmode.css
@@ -132,7 +132,7 @@ a {
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-    background-color: rgb(168, 168, 168);
+    background-color: #555;
   }
   
   /* Style the accordion panel. Note: hidden by default */
