--- a/CSC209/Hwks/Hwk2/creative/darkmode.css
+++ b/CSC209/Hwks/Hwk2/creative/darkmode.css
@@ -138,7 +138,7 @@ a {
   /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     color: black;
     max-height: 0;    
     overflow: hidden;
