--- a/CSC209/Hwks/Hwk3/technical/css/darkmode.css
+++ b/CSC209/Hwks/Hwk3/technical/css/darkmode.css
@@ -117,6 +117,15 @@ a {
     color: rgb(255, 255, 255);
 }
 
+.text {
+    color: #000000;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  } 
 @media (max-width: 600px) {
     nav, article {
       width: 100%;
