--- a/CSC209/Hwks/Hwk3/technical/css/lightmode.css
+++ b/CSC209/Hwks/Hwk3/technical/css/lightmode.css
@@ -114,7 +114,7 @@ a {
 }
 
 .text {
-    color: #ffffff;
+    color: #000000;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
