--- a/CSC209/Hwks/Hwk3/technical/css/darkmode.css
+++ b/CSC209/Hwks/Hwk3/technical/css/darkmode.css
@@ -119,7 +119,8 @@ a {
 
 .text {
     color: #000000;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: bold;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
