--- a/CSC209/Hwks/Hwk4/technical/css/technical.css
+++ b/CSC209/Hwks/Hwk4/technical/css/technical.css
@@ -1,10 +1,9 @@
 
-.container {
+#myContainer {
     position: relative;
-    width: 350px;
-    height: 350px;
-    background-color: #e0e0e0;
-    border: 1px solid #000;
+    width: 400px;
+    height: 400px;
+    background-color: yellow;
 }
 
 .square {
@@ -33,7 +32,7 @@
 }
 
 #square4 {
-    background-color: yellow;
+    background-color: pink;
     top: 350px;
     left: 350px;
 }
