--- a/CSC209/Hwks/Hwk7+8/Hwk8/Level4/css/slideshow.css
+++ b/CSC209/Hwks/Hwk7+8/Hwk8/Level4/css/slideshow.css
@@ -39,8 +39,8 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: #fe73e0;
+  font-size: 20px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -59,17 +59,16 @@ img {vertical-align: middle;}
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: rgb(105, 57, 57);
+  background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.dot.active {
   background-color: #717171;
 }
 
